ENH: Update .network CSS, minor label corrections (#7)
* Update service_insights.html

Changing Network Flow Id to prevent Overlapping

* Update script.js

Changing Preselected Services

* Update style.css

Adding network2 Styles to prevent overlapping

* Update style.css

* Update service_insights.js

Changing Calling ID to network2

--- a/style.css
+++ b/style.css
@@ -167,6 +167,12 @@
 
 /* Network Diagram Container */
 #network {
+  border: 1px solid #dee2e6;
+  border-radius: 8px;
+}
+
+/* Network Diagram Container */
+#network2 {
   width: 100%;
   height: 400px;
   border: 1px solid #dee2e6;
